--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,4 +1,3 @@
-background_opacity: 0.95
 colors:
   bright:
     black: '0x282a40'
@@ -31,6 +30,7 @@ font:
     style: Regular
   size: 12.0
 window:
+  opacity: 0.95
   padding:
     x: 5
     y: 5
